start adjusting openapi specification
