# internal/api/types_gen.go
@@ -3,6 +3,10 @@
 // Code generated by github.com/deepmap/oapi-codegen/v2 version v2.1.0 DO NOT EDIT.
 package api
 
+import (
+	openapi_types "github.com/oapi-codegen/runtime/types"
+)
+
 const (
 	BearerAuthScopes = "BearerAuth.Scopes"
 	OAuth2Scopes     = "OAuth2.Scopes"
@@ -237,6 +241,29 @@ type FullElement struct {
 	Concept        *Concept `json:"concept,omitempty"`
 }
 
+// ImportJob defines model for ImportJob.
+type ImportJob struct {
+	CodeSystem CodeSystem `json:"codeSystem"`
+
+	// CodesystemType The type of the codesystem
+	CodesystemType string `json:"codesystemType"`
+
+	// DetectedColumns List of columns detected in the CSV file
+	DetectedColumns *[]string `json:"detectedColumns,omitempty"`
+
+	// Hash Hash of the CSV file content
+	Hash *string `json:"hash,omitempty"`
+
+	// Id Unique identifier for the import job
+	Id string `json:"id"`
+
+	// NumReadLines Number of lines read from the CSV file
+	NumReadLines *int `json:"numReadLines,omitempty"`
+
+	// Status Current status of the job (In Progress, Done, Failed)
+	Status string `json:"status"`
+}
+
 // Mapping defines model for Mapping.
 type Mapping struct {
 	Comment     *string             `json:"comment,omitempty"`
@@ -391,6 +418,11 @@ type GetAllConceptsParamsSortBy string
 // GetAllConceptsParamsSortOrder defines parameters for GetAllConcepts.
 type GetAllConceptsParamsSortOrder string
 
+// PostImportCodeSystemMultipartBody defines parameters for PostImportCodeSystem.
+type PostImportCodeSystemMultipartBody struct {
+	File *openapi_types.File `json:"file,omitempty"`
+}
+
 // GetAllProjectsParams defines parameters for GetAllProjects.
 type GetAllProjectsParams struct {
 	// Page Page number (must be a positive integer)
@@ -438,6 +470,12 @@ type CreateCodeSystemJSONRequestBody = CreateCodeSystem
 
 // UpdateCodeSystemJSONRequestBody defines body for UpdateCodeSystem for application/json ContentType.
 type UpdateCodeSystemJSONRequestBody = CodeSystem
+
+// PostImportCodeSystemJSONRequestBody defines body for PostImportCodeSystem for application/json ContentType.
+type PostImportCodeSystemJSONRequestBody = CreateCodeSystem
+
+// PostImportCodeSystemMultipartRequestBody defines body for PostImportCodeSystem for multipart/form-data ContentType.
+type PostImportCodeSystemMultipartRequestBody PostImportCodeSystemMultipartBody
 
 // CreateProjectJSONRequestBody defines body for CreateProject for application/json ContentType.
 type CreateProjectJSONRequestBody = CreateProjectDetails
